<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/prizeCreateLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!--HEADER-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical">

                <ImageButton
                    android:id="@+id/backBtnPrize"
                    android:contentDescription="Volver a la lista de premios"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/bg_button"
                    android:src="@drawable/back_ico"
                    android:scaleType="center" />

                <TextView
                    android:id="@+id/PrizeCreateSectionTitle"
                    android:layout_width="210dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_height="wrap_content"
                    android:text="Crear premio"
                    android:textSize="16dp"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <!--CARD DE ALBUM-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_card"
                android:elevation="4dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/imagePrize"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="Icono de premio"
                    android:background="@drawable/bg_button"
                    android:src="@drawable/award_ico"
                    android:layout_marginHorizontal="10dp"
                    android:padding="15dp"
                    android:scaleType="centerInside"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="#FFFFFF"
                    />

                <!--CARD DE ALBUM-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_card"
                    android:elevation="4dp"
                    android:gravity="start">

                    <TextView
                        android:id="@+id/newPrizeName"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:gravity="center"
                        android:text="Nombre"
                        android:textSize="15dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/white"/>
                        />

                    <EditText
                        android:id="@+id/inputPrizeName"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="10dp"
                        android:autofillHints="name"
                        android:inputType="text"
                        android:hint="Nombre aquí"
                        android:textSize="15dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColorHint="#B0B0B0"
                        android:textColor="@color/white"
                        android:maxLength="25"/>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="#FFFFFF"
                    />

                <!--CARD DE ALBUM-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_card"
                    android:elevation="4dp"
                    android:gravity="start">

                    <TextView
                        android:id="@+id/newPrizeDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:gravity="center"
                        android:text="Descripción"
                        android:textSize="15dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/white"/>

                    <EditText
                        android:id="@+id/inputPrizeDescription"
                        android:layout_height="48dp"
                        android:layout_width="match_parent"
                        android:layout_marginStart="10dp"
                        android:autofillHints="name"
                        android:hint="Descripción aquí"
                        android:textSize="15dp"
                        android:inputType="textMultiLine"
                        android:maxLines="2"
                        android:maxLength="80"
                        android:scrollbars="vertical"
                        android:overScrollMode="always"
                        android:scrollHorizontally="false"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColorHint="#B0B0B0"
                        android:textColor="@color/white"
                        />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="#FFFFFF"
                    />

                <!--CARD DE ALBUM-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_card"
                    android:elevation="4dp"
                    android:gravity="start">

                    <TextView
                        android:id="@+id/newPrizeOrganization"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:gravity="center"
                        android:text="Organización"
                        android:textSize="15dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/white"/>

                    <EditText
                        android:id="@+id/inputPrizeOrganization"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="10dp"
                        android:autofillHints="name"
                        android:inputType="text"
                        android:hint="Nombre aquí"
                        android:textSize="15dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColorHint="#B0B0B0"
                        android:textColor="@color/white"
                        android:maxLength="25"/>

                    />

                </LinearLayout>

                <Button
                    android:id="@+id/btnCreatePrize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#B0B0B0"
                    android:text="Crear premio"
                    android:textSize="15dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/white"
                    android:enabled="false"/>

                <TextView
                    android:id="@+id/CreateSuccessAward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:visibility="invisible"
                    android:text="¡Premio creado exitosamente!"
                    android:textSize="15dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="#1ED760"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>