...
            android:gravity="center"
            android:text="Premios"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/addButtonPrize"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle_background"
            android:contentDescription="Buscar"
            android:src="@drawable/ic_add"
            app:tint="#FFFFFF" />
...
